Finished redesigning header in middle and large format. Fix form stretching issue.

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -33,7 +33,6 @@
       font-family: $poppins;
       font-size: 2rem;
       letter-spacing: 0.1rem;
-      margin-top: 2.2rem;
     }
   }
 
