--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -38,7 +38,7 @@
     }
 
     &.hidden {
-      transform: translateX(-1200%);
+      transform: translateX(-1400%);
     }
   }
 }
