--- a/src/scss/_search-bar.scss
+++ b/src/scss/_search-bar.scss
@@ -23,7 +23,7 @@
 
   &__icon {
     color: whitesmoke;
-    margin-top: 8px;
+    margin-top: 10px;
 
     &-container {
       background-color: $purple-color;
